user sign up and email confirmation working

--- a/src/views/users/sign_up.ejs
+++ b/src/views/users/sign_up.ejs
@@ -11,6 +11,8 @@
       <h2>Welcome to Blocipedia</h2>
       <h1>Sign up</h1>
 
+      <% include ../static/partials/messages.ejs %>
+
       <form action="/users" method="post">
 
         <div class="form-group">
