--- a/src/assets/css/application.css
+++ b/src/assets/css/application.css
@@ -1,5 +1,17 @@
+*{
+  font-family: "Times New Roman", Times, serif;
+}
+
 body {
   padding-top: 70px;
+}
+
+h1,h3,h3,h4,h5 {
+  font-family: 'Times New Roman', Times, serif;
+}
+
+p {
+  font-family: Courier New, Courier, monospace;
 }
 
 .jumbotron {
