users working, sendgrid stopped

--- a/src/views/static/index.ejs
+++ b/src/views/static/index.ejs
@@ -16,7 +16,8 @@
 
         <section class="jumbotron text-center">
             <h3 class="card-title">Create and share Markdown Wikis</h3>
-            <button class="btn btn-success">Sign Up</button>
+            <a href="/users/sign_up" class="btn btn-primary btn-lg">Sign up</a>
+
         </section>
         
         <section class="row justify-content-center plans">
