--- a/src/views/wikis/index.ejs
+++ b/src/views/wikis/index.ejs
@@ -23,12 +23,16 @@
                       <a href="/wikis/<%= wiki.id %>"> <%= wiki.title %> </a>
                     </td>
                     <td>
-                        <a href="/wikis/<%= wiki.id %>/edit" class="btn btn-warning">Edit</a>
+                        <% if(currentUser) { %>
+                          <a href="/wikis/<%= wiki.id %>/edit" class="btn btn-warning">Edit</a>
+                        <% } %>
                     </td>
                     <td>
-                      <form style="display:initial" action="/wikis/<%= wiki.id %>/destroy" method="post">
-                        <button type="submit" class="btn btn-danger">Delete</button>
-                      </form>
+                      <% if(currentUser) { %>
+                        <form style="display:initial" action="/wikis/<%= wiki.id %>/destroy" method="post">
+                          <button type="submit" class="btn btn-danger">Delete</button>
+                        </form>
+                      <% } %>
                     </td>
                   </tr>
                 <% }) %>
