--- a/src/views/wikis/show.ejs
+++ b/src/views/wikis/show.ejs
@@ -14,7 +14,9 @@
               <p><%= wiki.userId %></p>
               <p class="panel-body"><%= wiki.body %></p>
           </div>
-          <a href="/wikis/<%= wiki.id %>/edit" class="btn btn-warning">Edit</a>
+          <% if(currentUser) { %>
+            <a href="/wikis/<%= wiki.id %>/edit" class="btn btn-warning">Edit</a>
+          <% } %>
       </section>
       
        
