--- a/src/views/static/index.ejs
+++ b/src/views/static/index.ejs
@@ -11,12 +11,13 @@
 
         <!-- Jumbotron Header -->
         <header class="page-header small text-center" "pagination-centered">
-          <h1 class="display-3">Blocpedia: Social, Markdown Wikis</h1>
+          <h1 class="display-4">Blocpedia: Social, Markdown Wikis</h1>
         </header>
 
         <section class="jumbotron text-center">
             <h3 class="card-title">Create and share Markdown Wikis</h3>
-            <a href="/users/sign_up" class="btn btn-primary btn-lg">Sign up</a>
+            <a href="/wikis" class="btn btn-secondary btn-lg">See Wikis</a>
+            
 
         </section>
         
@@ -24,11 +25,13 @@
           <div class="col-lg-3 text-center">
             <h5 class="card-title">Create as many public <br>wikis as you want!</h5>
             <p class="card-text">FREE PLAN<br>$0</p>
+            <a href="/users/sign_up" class="btn btn-secondary btn-lg">Sign up</a>
           </div>
 
           <div class="col-lg-3 text-center">
-            <h5 class="card-title">Create private wikis!</h5>
+            <h5 class="card-title">Create private wikis, <br> unlimited amount</h5>
             <p class="card-text">PREMIUM PLAN<br>$10/month</p>
+            <a href="/users/upgrade" class="btn btn-primary btn-lg">Sign up</a>
 
           </div>
         </section>
