--- a/src/views/static/partials/navbar.ejs
+++ b/src/views/static/partials/navbar.ejs
@@ -6,15 +6,18 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
-
-        <li class="nav-item"></li>
-          <a class="nav-link" href="/">Home</a>
-        </li>
  
         <% if(currentUser) { %>
           <li class="nav-item">
+              <a class="nav-link" href="/wikis">All Wikis</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="/users/<%= currentUser.id %>">Profile</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="/users/sign_out">Sign out</a>
           </li>
+
         <% } else { %>
           <li class="nav-item">
             <a class="nav-link" href="/users/sign_up">Sign up</a>
