fixing error env variables

--- a/src/views/users/upgrade.ejs
+++ b/src/views/users/upgrade.ejs
@@ -11,34 +11,30 @@
 
       <% include ../static/partials/messages.ejs %>
 
-      <h1>Premiun Membership</h1>
+      <h1>Membership Options</h1>
+
+      <% if(currentUser && currentUser.role == "standard") { %>
+        <h3>Upgrade your membership to Premium</h3>
         <h4>As a Premium Member you will be able to create and colaborate on private wikis</h4>
         
-        <% if(currentUser && currentUser.role == "standard") { %>
-            <h3>Upgrade your membership to Premium</h3>
-            
-            <form action="/users/<%=currentUser.id%>/upgrade" method="POST">
-                <script
-                    src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-                    data-key="pk_test_TYooMQauvdEDq54NiTphI7jx"
-                    data-amount="1500"
-                    data-name="Blocipedia" 
-                    data-description="Blocipedia Premium Membership"
-                    data-image="https://stripe.com/img/documentation/checkout/marketplace.png"
-                    data-locale="auto">
-                </script>
-            </form>
-            
-         <% } else { %>
-          <h5>Sign up Premium</h5>
-
-        <% } %>
+        <form action="/users/<%=currentUser.id%>/upgrade" method="POST">
+            <script
+                src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+                data-key="pk_test_wsq16KTKgaWFzlVvr9WBqYDm"
+                data-amount="1"
+                data-name="Blocipedia" 
+                data-description="Blocipedia Premium Membership"
+                data-image="https://stripe.com/img/documentation/checkout/marketplace.png"
+                data-locale="auto">
+            </script>
+        </form>
         
-        
-   
+     <% } else if(currentUser && currentUser.role === "premium") { %>
       <h5>Downgrade your membership</h5>
-      
-
+      <form action="/users/<%=currentUser.id%>/downgrade" method="POST">
+        <button type="submit" class="btn btn-danger">Standard Membership</button>
+      </form>
+    <% } %>
     
     </main>
 
@@ -47,4 +43,3 @@
   </body>
 
   </html>
-
