--- a/src/views/users/show.ejs
+++ b/src/views/users/show.ejs
@@ -13,7 +13,13 @@
 
       <h1><%= `${user.email}'s profile` %></h1>
 
-      <p><%= `$Your account is {user.role}` %></p>
+
+
+      <p><%= `Your account is currently ${user.role}.` %></p>
+
+      <a href="/users/upgrade" class="btn btn-primary">Upgrade</a>
+
+
 
       <hr>
 
