--- a/src/views/wikis/index.ejs
+++ b/src/views/wikis/index.ejs
@@ -13,8 +13,6 @@
                 <tr>
                   <th class="table-wikis-head">Wikis</th>
                   <th class="table-wikis-head">by user</th>
-                  <th class="table-edit-head">edit</th>
-                  <th>delete</th>
                 </tr>
               </thead>
               <tbody>
@@ -24,19 +22,7 @@
                       <a href="/wikis/<%= wiki.id %>"> <%= wiki.title %> </a>
                     </td>
                     <td>
-                      <p>will be username</p>
-                    </td>
-                    <td>
-                      <% if(currentUser) { %>
-                        <a href="/wikis/<%= wiki.id %>/edit" class="btn btn-warning">Edit</a>
-                      <% } %>
-                    </td>
-                    <td>
-                      <% if(currentUser) { %>
-                        <form style="display:initial" action="/wikis/<%= wiki.id %>/destroy" method="post">
-                          <button type="submit" class="btn btn-danger">Delete</button>
-                        </form>
-                      <% } %>
+                        <p><%= wiki.userId %></p>
                     </td>
                   </tr>
                 <% }) %>
