--- a/src/views/wikis/index.ejs
+++ b/src/views/wikis/index.ejs
@@ -6,6 +6,8 @@
   <body>
     <% include ../static/partials/navbar.ejs %>
     <main class="main-index-wikis">
+
+        <% include ../static/partials/messages.ejs %>
         <h1>Wikis</h1>
         <table class="table table-bordered table-hover table-index-wikis">
     
