--- a/src/views/wikis/edit.ejs
+++ b/src/views/wikis/edit.ejs
@@ -9,6 +9,8 @@
 
     <main class="container edit-box">
 
+        <% include ../static/partials/messages.ejs %>
+
       <h1>Edit Wiki</h1>
 
       <% if(currentUser) { %>
