--- a/src/views/wikis/show.ejs
+++ b/src/views/wikis/show.ejs
@@ -14,16 +14,37 @@
               <p><%= wiki.userId %></p>
               <p class="panel-body"><%- wiki.body %></p>
           </div>
+          <% include ../static/partials/messages.ejs %>
 
           <% if (currentUser && wiki.private === false) { %>
               <a href="/wikis/<%= wiki.id %>/edit" class="btn btn-warning">Edit</a>
-          <% } else if (currentUser && wiki.private === true && wiki.userId != currentUser.id) { %>
-            <p>This is a private wiki</p>
-            <a href="/wikis/<%= wiki.id %>/edit" class="btn btn-warning">Edit</a>
           <% } else if(currentUser && wiki.private === true && wiki.userId === currentUser.id && currentUser.role === "premium") { %>
-            <h2>This is a Private Wiki by you</h2>
-            <a href="/wikis/<%= wiki.id %>/edit" class="btn btn-warning">Edit</a>
+              <h2>This is a Private Wiki by you</h2>
+              <a href="/wikis/<%= wiki.id %>/edit" class="btn btn-warning">Edit</a>
+          
+          <% } else if (currentUser && wiki.private === true && wiki.userId != currentUser.id) { %>
+            <h4>This is a private wiki</h4>
           <% } %>
+
+          <% if (currentUser) { %>
+            <% collaborators.forEach((collaborator) => {  %>
+              <% if (currentUser.id === collaborator.userId) { %>
+                <h4>However, the owner allowed you to edit it.</h4>
+                <a href="/wikis/<%= wiki.id %>/edit" class="btn btn-warning">Edit</a>
+              <% } %>
+            <% }) %>
+          <% } %>
+        
+          
+
+
+
+
+
+          
+
+
+
       </section>
       
        
