--- a/src/views/static/index.ejs
+++ b/src/views/static/index.ejs
@@ -13,11 +13,11 @@
 
         <!-- Jumbotron Header -->
         <header class="page-header small text-center" "pagination-centered">
-          <h1 class="display-4">Blocpedia: Social, Markdown Wikis</h1>
+          <h1 class="display-4">Cookopedia: Recipe Wikis</h1>
         </header>
 
         <section class="jumbotron text-center">
-            <h3 class="card-title">Create and share Markdown Wikis</h3>
+            <h3 class="card-title">Create and share Recipe Wikis</h3>
             <a href="/wikis" class="btn btn-secondary btn-lg">See Wikis</a>
             
 
