--- a/src/views/users/sign_up.ejs
+++ b/src/views/users/sign_up.ejs
@@ -8,7 +8,7 @@
     <% include ../static/partials/navbar.ejs %>
 
     <main class="container">
-      <h2>Welcome to Blocipedia</h2>
+      <h2>Welcome to Cookopedia</h2>
       <h1>Sign up</h1>
 
       <% include ../static/partials/messages.ejs %>
