--- a/src/views/users/show.ejs
+++ b/src/views/users/show.ejs
@@ -30,14 +30,14 @@
 
       <hr>
 
-      <h2> My Wikis</h2>
+      <h2> My Recipes</h2>
 
 
       <table class="table table-bordered table-hover table-index-wikis">
     
             <thead>
                 <tr>
-                  <th class="table-wikis-head">Wikis</th>
+                  <th class="table-wikis-head">Recipes</th>
                   <th class="table-edit-head">edit</th>
                   <th>delete</th>
                   <th>private</th>
@@ -75,7 +75,7 @@
 
         <% if(currentUser && currentUser.role == "premium") { %>
 
-          <a href="/wikis/new_private" class="btn btn-primary">Create Private Wiki</a>
+          <a href="/wikis/new_private" class="btn btn-primary">Create Private Recipes</a>
         
         <% } %>
 
