--- a/src/views/wikis/new.ejs
+++ b/src/views/wikis/new.ejs
@@ -7,7 +7,7 @@
     <% include ../static/partials/navbar.ejs %>
 
     <main class="container">
-      <h1>New Public Wiki</h1>
+      <h1>New Public Recipe</h1>
 
       <% include ../static/partials/messages.ejs %>
 
@@ -15,12 +15,12 @@
 
         <form action="/wikis/create" method="post">
           <div class="form-group">
-            <label for="title">Wiki title</label>
+            <label for="title">Recipe title</label>
             <input type="text" class="form-control" name="title" aria-describedby="titleHelp" placeholder="Enter Title">
           </div>
           <div class="form-group">
-            <label for="body">Wiki body</label>
-            <textarea rows="4" class="form-control" name="body" placeholder="Enter Wiki body"></textarea>
+            <label for="body">Recipe body</label>
+            <textarea rows="4" class="form-control" name="body" placeholder="Enter body"></textarea>
           </div>
           <button type="submit" class="btn btn-primary">Submit</button>
         </form>
