--- a/src/views/wikis/show.ejs
+++ b/src/views/wikis/show.ejs
@@ -7,53 +7,31 @@
     <% include ../static/partials/navbar.ejs %>
 
     <main>
+      <section class="container show-wiki-container">
+        <div class="panel panel-default panel-wikis-show">
+          <h1 class="panel-heading"><%= wiki.title %></h1>
+          <p><%= wiki.userId %></p>
+          <p class="panel-body"><%- wiki.body %></p>
+        </div>
+        <% include ../static/partials/messages.ejs %> <% if (currentUser &&
+        wiki.private === false) { %>
+        <a href="/wikis/<%= wiki.id %>/edit" class="btn btn-warning">Edit</a> <%
+        } else if(currentUser && wiki.private === true && wiki.userId ===
+        currentUser.id && currentUser.role === "premium") { %>
+        <h2>This is a Private Recipe by you</h2>
+        <a href="/wikis/<%= wiki.id %>/edit" class="btn btn-warning">Edit</a>
 
-      <section  class="container show-wiki-container">
-          <div class="panel panel-default panel-wikis-show">
-              <h1 class="panel-heading"><%= wiki.title %></h1>
-              <p><%= wiki.userId %></p>
-              <p class="panel-body"><%- wiki.body %></p>
-          </div>
-          <% include ../static/partials/messages.ejs %>
-
-          <% if (currentUser && wiki.private === false) { %>
-              <a href="/wikis/<%= wiki.id %>/edit" class="btn btn-warning">Edit</a>
-          <% } else if(currentUser && wiki.private === true && wiki.userId === currentUser.id && currentUser.role === "premium") { %>
-              <h2>This is a Private Wiki by you</h2>
-              <a href="/wikis/<%= wiki.id %>/edit" class="btn btn-warning">Edit</a>
-          
-          <% } else if (currentUser && wiki.private === true && wiki.userId != currentUser.id) { %>
-            <h4>This is a private wiki</h4>
-          <% } %>
-
-          <% if (currentUser) { %>
-            <% collaborators.forEach((collaborator) => {  %>
-              <% if (currentUser.id === collaborator.userId) { %>
-                <h4>However, the owner allowed you to edit it.</h4>
-                <a href="/wikis/<%= wiki.id %>/edit" class="btn btn-warning">Edit</a>
-              <% } %>
-            <% }) %>
-          <% } %>
-        
-          
-
-
-
-
-
-          
-
-
-
+        <% } else if (currentUser && wiki.private === true && wiki.userId !=
+        currentUser.id) { %>
+        <h4>This is a private recipe</h4>
+        <% } %> <% if (currentUser) { %> <% collaborators.forEach((collaborator)
+        => { %> <% if (currentUser.id === collaborator.userId) { %>
+        <h4>However, the owner allowed you to edit it.</h4>
+        <a href="/wikis/<%= wiki.id %>/edit" class="btn btn-warning">Edit</a> <%
+        } %> <% }) %> <% } %>
       </section>
-      
-       
-
-        
-        
     </main>
 
     <% include ../static/partials/baseScripts.ejs %>
-
   </body>
 </html>
