--- a/src/views/wikis/new.ejs
+++ b/src/views/wikis/new.ejs
@@ -15,11 +15,11 @@
 
         <form action="/wikis/create" method="post">
           <div class="form-group">
-            <label for="title">Recipe title</label>
+            <label for="title">Recipe's title</label>
             <input type="text" class="form-control" name="title" aria-describedby="titleHelp" placeholder="Enter Title">
           </div>
           <div class="form-group">
-            <label for="body">Recipe body</label>
+            <label for="body">Recipe's body</label>
             <textarea rows="4" class="form-control" name="body" placeholder="Enter body"></textarea>
           </div>
           <button type="submit" class="btn btn-primary">Submit</button>
