--- a/src/views/wikis/new_private.ejs
+++ b/src/views/wikis/new_private.ejs
@@ -7,7 +7,7 @@
     <% include ../static/partials/navbar.ejs %>
 
     <main class="container">
-      <h1>New  Private Wiki</h1>
+      <h1>New Private Recipe</h1>
 
       <% include ../static/partials/messages.ejs %>
 
@@ -15,11 +15,11 @@
 
         <form action="/wikis/create_private" method="post">
           <div class="form-group">
-            <label for="title">Wiki title</label>
+            <label for="title">Recipe title</label>
             <input type="text" class="form-control" name="title" aria-describedby="titleHelp" placeholder="Enter Title">
           </div>
           <div class="form-group">
-            <label for="body">Wiki body</label>
+            <label for="body">Recipe's body</label>
             <textarea rows="4" class="form-control" name="body" placeholder="Enter Wiki body"></textarea>
           </div>
           <button type="submit" class="btn btn-primary">Submit</button>
