--- a/src/views/static/index.ejs
+++ b/src/views/static/index.ejs
@@ -9,7 +9,7 @@
 
     <main class="container">
       <!-- Jumbotron Header -->
-      <header class="page-header small text-center pagination-centered">
+      <header class="page-header small pagination-centered">
         <h1 class="display-4 pt-12">Cookopedia: Recipe Wikis</h1>
       </header>
 
