--- a/src/views/static/partials/head.ejs
+++ b/src/views/static/partials/head.ejs
@@ -4,10 +4,10 @@
   content="width=device-width, initial-scale=1, shrink-to-fit=no"
 />
 <title>Cookopedia</title>
-<link
+<!-- <link
   rel="stylesheet"
   href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
   integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
   crossorigin="anonymous"
-/>
-<link rel="stylesheet" href="/css/application.css" />
+/> -->
+<link rel="stylesheet" href="/dist/tailwind.css" />
