add tailwind, new bootstrap

--- a/src/assets/css/application.css
+++ b/src/assets/css/application.css
@@ -1,9 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-npx tailwind build styles.css -o output.css body {
-  padding-top: 70px;
-}
+
+/* NAVBAR  */
 
 .jumbotron {
   width: 60%;
