--- a/src/views/static/index.ejs
+++ b/src/views/static/index.ejs
@@ -7,16 +7,28 @@
     <% include ./partials/navbar.ejs %> <% include
     ../static/partials/messages.ejs %>
 
-    <main class="container">
+    <main class="container p-8">
       <!-- Jumbotron Header -->
-      <header class="page-header small pagination-centered">
-        <h1 class="display-4 pt-12">Cookopedia: Recipe Wikis</h1>
+      <header class="page-header small text-center">
+        <h1 class="display-4 pt-12">Wikipedia: make your own wikis</h1>
       </header>
 
-      <section class="jumbotron text-center">
-        <h3 class="card-title">Create and share Recipe Wikis</h3>
-        <a href="/wikis" class="btn btn-secondary btn-lg">See Wikis</a>
-      </section>
+      <div class="w-full flex flex-column justify-center">
+        <div class="input-group md-form form-sm form-2 pl-0">
+          <input
+            class="form-control my-0 py-1 red-border"
+            type="text"
+            placeholder="Search"
+            aria-label="Search"
+          />
+          <div class="input-group-append">
+            <span class="input-group-text red lighten-3" id="basic-text1"
+              ><i class="fas fa-search text-grey" aria-hidden="true"></i
+            ></span>
+          </div>
+        </div>
+      </div>
+      <a href="/wikis" class="btn btn-secondary btn-lg">See Wikis</a>
 
       <section class="row justify-content-center plans">
         <div class="col-lg-3 text-center">
