--- a/src/views/static/partials/head.ejs
+++ b/src/views/static/partials/head.ejs
@@ -3,11 +3,19 @@
   name="viewport"
   content="width=device-width, initial-scale=1, shrink-to-fit=no"
 />
-<title>Cookopedia</title>
-<!-- <link
+<title>Wikipedia</title>
+<link
   rel="stylesheet"
-  href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-  integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-  crossorigin="anonymous"
-/> -->
+  href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+/>
+<!-- Bootstrap core CSS -->
+<link
+  href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css"
+  rel="stylesheet"
+/>
+<!-- Material Design Bootstrap -->
+<link
+  href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.8/css/mdb.min.css"
+  rel="stylesheet"
+/>
 <link rel="stylesheet" href="/dist/tailwind.css" />
