--- a/src/views/static/index.ejs
+++ b/src/views/static/index.ejs
@@ -28,8 +28,11 @@
           </div>
         </div>
       </div>
-      <a href="/wikis" class="btn btn-secondary btn-lg">See Wikis</a>
-
+      <section class="row justify-content-center">
+        <div class="col-lg-3 text-center">
+          <a href="/wikis" class="btn btn-secondary btn-lg">See Wikis</a>
+        </div>
+      </section>
       <section class="row justify-content-center plans">
         <div class="col-lg-3 text-center">
           <h5 class="card-title">
