--- a/src/views/users/sign_in.ejs
+++ b/src/views/users/sign_in.ejs
@@ -9,38 +9,40 @@
     <main class="container p-8 mt-12">
       <% include ../static/partials/messages.ejs %>
 
-      <h1>Sign in</h1>
+      <div className="w-full text-center">
+        <h2 class="h2 pb-4 text-center">Welcome back</h2>
+      </div>
 
-      <form action="/users/sign_in" method="post">
-        <div class="form-group">
-          <label for="email">Email</label>
-          <input
-            type="email"
-            class="form-control"
-            name="email"
-            aria-describedby="emailHelp"
-            placeholder="Enter email"
-          />
-          <small class="text-muted" id="emailHelp"
-            >email address must be a valid address</small
-          >
+      <form
+        class="w-full flex justify-center"
+        action="/users/sign_in"
+        method="post"
+      >
+        <div class="w-3/6 flex flex-column">
+          <div class="form-group">
+            <label for="email">Email</label>
+            <input
+              type="email"
+              class="form-control"
+              name="email"
+              aria-describedby="emailHelp"
+              placeholder="Enter email"
+            />
+          </div>
+
+          <div class="form-group">
+            <label for="password">Password</label>
+            <input
+              type="password"
+              class="form-control"
+              name="password"
+              aria-describedby="passwordHelp"
+              placeholder="Enter password"
+            />
+          </div>
+
+          <button type="submit" class="btn btn-primary m-0">Sign in</button>
         </div>
-
-        <div class="form-group">
-          <label for="password">Password</label>
-          <input
-            type="password"
-            class="form-control"
-            name="password"
-            aria-describedby="passwordHelp"
-            placeholder="Enter password"
-          />
-          <small class="text-muted" id="passwordHelp"
-            >password must match confirmation below</small
-          >
-        </div>
-
-        <button type="submit" class="btn btn-primary">Sign in</button>
       </form>
     </main>
 
