--- a/src/views/static/index.ejs
+++ b/src/views/static/index.ejs
@@ -7,25 +7,30 @@
     <% include ./partials/navbar.ejs %> <% include
     ../static/partials/messages.ejs %>
 
-    <main class="container p-8">
+    <main class="container p-8 mt-12">
       <!-- Jumbotron Header -->
       <header class="page-header small text-center">
-        <h1 class="display-4 pt-12">Wikipedia: make your own wikis</h1>
+        <h1 class="display-4 ">Wikipedia: make your own wikis</h1>
       </header>
 
-      <div class="w-full flex flex-column justify-center">
+      <form 
+        class="w-full flex flex-column justify-center"
+        action="/wikis/stringsearch"
+        method="GET"
+      >
         <div class="input-group md-form form-sm form-2 pl-0">
           <input
             class="form-control my-0 py-1 red-border"
             type="text"
+            name="string"
             placeholder="Search"
             aria-label="Search"
           />
-          <div class="input-group-append">
+          <button class="input-group-append" type="submit">
             <span class="input-group-text red lighten-3" id="basic-text1"
               ><i class="fas fa-search text-grey" aria-hidden="true"></i
             ></span>
-          </div>
+              </button>
         </div>
       </div>
       <section class="row justify-content-center">
@@ -38,7 +43,7 @@
           <h5 class="card-title">
             Create as many public <br />wikis as you want!
           </h5>
-          <p class="card-text">FREE PLAN<br />$0</p>
+          <p class="card-text"><b>FREE PLAN</b><br />$0</p>
           <a href="/users/sign_up" class="btn btn-secondary btn-lg">Sign up</a>
         </div>
 
@@ -47,7 +52,7 @@
             Create private wikis, <br />
             unlimited amount
           </h5>
-          <p class="card-text">PREMIUM PLAN<br />$10/month</p>
+          <p class="card-text"><b>PREMIUM PLAN</b><br />$10/month</p>
           <a href="/users/upgrade" class="btn btn-primary btn-lg">Sign up</a>
         </div>
       </section>
