--- a/src/views/collaborator/show.ejs
+++ b/src/views/collaborator/show.ejs
@@ -5,7 +5,7 @@
   </head>
   <body>
     <% include ../static/partials/navbar.ejs %>
-     <main class="container">
+     <main class="container p-8 mt-16">
       <% include ../static/partials/messages.ejs %>
 
         <h1>Collaborators for <%= wiki.title %> Wiki</h1>
