--- a/src/views/static/index.ejs
+++ b/src/views/static/index.ejs
@@ -7,7 +7,7 @@
     <% include ./partials/navbar.ejs %> <% include
     ../static/partials/messages.ejs %>
 
-    <main class="container p-8 mt-12">
+    <main class="container p-8 mt-16">
       <!-- Jumbotron Header -->
       <header class="page-header small text-center">
         <h1 class="display-4 ">Wikipedia: make your own wikis</h1>
@@ -15,7 +15,7 @@
 
       <form 
         class="w-full flex flex-column justify-center"
-        action="/wikis/stringsearch"
+        action="/wikis/searchstring"
         method="GET"
       >
         <div class="input-group md-form form-sm form-2 pl-0">
