--- a/src/views/users/payment.ejs
+++ b/src/views/users/payment.ejs
@@ -1,26 +1,19 @@
-
 <!DOCTYPE html>
 <html>
   <head>
     <% include ../static/partials/head.ejs %>
   </head>
   <body>
-
     <% include ../static/partials/navbar.ejs %>
 
-    
+    <main class="container p-8 mt-16">
+      <% include ../static/partials/messages.ejs %>
 
-    <main class="container">
-
-        <% include ../static/partials/messages.ejs %>
-
-      
-
-      <h1>Congratulations! You have successfully upgraded to a Premium Membership</h1>
-
+      <h1>
+        Congratulations! You have successfully upgraded to a Premium Membership
+      </h1>
     </main>
-    
-    <% include ../static/partials/baseScripts.ejs %>
 
+    <% include ../static/partials/baseScripts.ejs %>
   </body>
-  </html>
+</html>
