--- a/src/views/wikis/show.ejs
+++ b/src/views/wikis/show.ejs
@@ -7,7 +7,7 @@
     <% include ../static/partials/navbar.ejs %>
 
     <main>
-      <section class="container show-wiki-container">
+      <section class="container show-wiki-container p-8 mt-16">
         <div class="panel panel-default panel-wikis-show">
           <h1 class="panel-heading"><%= wiki.title %></h1>
           <p><%= wiki.userId %></p>
