--- a/src/views/static/partials/navbar.ejs
+++ b/src/views/static/partials/navbar.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
   <div class="container">
-    <a class="navbar-brand" href="/">Cookopedia</a>
+    <a class="navbar-brand" href="/">Wikipedia</a>
     <button
       class="navbar-toggler"
       type="button"
