--- a/src/views/users/show.ejs
+++ b/src/views/users/show.ejs
@@ -6,7 +6,7 @@
   <body>
     <% include ../static/partials/navbar.ejs %>
 
-    <main class="container">
+    <main class="container p-8 mt-16">
       <% include ../static/partials/messages.ejs %>
 
       <h1><%= `${user.email}'s profile` %></h1>
